--- a/hardhat/.gitignore
+++ b/hardhat/.gitignore
@@ -1,11 +1,11 @@
 # Hardhat files
-/cache
-/artifacts
+cache
+artifacts
 
 # TypeChain files
-/typechain
-/typechain-types
+typechain
+typechain-types
 
 # solidity-coverage files
-/coverage
-/coverage.json
+coverage
+coverage.json
