--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "packageManager": "pnpm@8.15.4",
     "scripts": {
         "fmt": "prettier .",
-        "fmt:fix": "prettier --write ."
+        "fmt:fix": "prettier --write .",
+        "lint:js": "eslint **/*.{js,svelte,ts}"
     },
     "devDependencies": {
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.35.1",
         "prettier": "^3.2.5",
         "prettier-plugin-solidity": "^1.3.1",
         "prettier-plugin-svelte": "^3.2.1",
