--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -14,6 +14,8 @@
         "$contracts": "workspace:daoism-solidity@*",
         "@linthtml/linthtml": "^0.9.5",
         "@linthtml/linthtml-config-recommended": "^0.1.0",
+        "@skeletonlabs/skeleton": "^2.9.0",
+        "@skeletonlabs/tw-plugin": "^0.3.1",
         "@steeze-ui/heroicons": "^2.3.0",
         "@steeze-ui/svelte-icon": "^1.5.0",
         "@sveltejs/adapter-static": "^3.0.1",
