--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -25,6 +25,7 @@
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
         "autoprefixer": "^10.4.17",
+        "ethers": "^6.11.1",
         "htmlnano": "^2.1.0",
         "stylelint": "^16.2.1",
         "stylelint-config-standard": "^36.0.0",
@@ -34,6 +35,7 @@
         "tailwindcss": "^3.4.1",
         "terser": "^5.28.1",
         "typescript": "^5.3.3",
+        "valibot": "^0.29.0",
         "vite": "^5.1.4",
         "vite-plugin-tailwind-purgecss": "^0.2.0"
     }
