fix: use temporary hack for importing generated types

--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,5 +1,6 @@
 {
     "name": "daoism-solidity",
+    "main": "typechain-types/index.ts",
     "scripts": {
         "compile": "hardhat compile",
         "test": "hardhat test",
