chore: rename project to Botoken

--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "daoism-solidity",
+    "name": "botoken-solidity",
     "main": "typechain-types/index.ts",
     "scripts": {
         "compile": "hardhat compile",
