--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "daoism-workspace",
+    "name": "botoken-workspace",
     "packageManager": "pnpm@8.15.4",
     "scripts": {
         "fmt": "prettier .",
