--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -11,6 +11,7 @@
         "@nomicfoundation/hardhat-ethers": "^3.0.5",
         "@nomicfoundation/hardhat-toolbox": "^4.0.0",
         "@openzeppelin/contracts": "^5.0.2",
+        "chai": "^4.4.1",
         "dotenv": "^16.4.5",
         "ethers": "^6.11.1",
         "hardhat": "^2.21.0"
