--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "botoken-workspace",
+    "license": "AGPL-3.0-only",
     "packageManager": "pnpm@8.15.4",
     "scripts": {
         "fmt": "prettier .",
