--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "botoken-solidity",
+    "name": "botoken-hardhat",
     "main": "typechain-types/index.ts",
     "license": "AGPL-3.0-only",
     "scripts": {
