--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "botoken-workspace",
     "license": "AGPL-3.0-only",
-    "packageManager": "pnpm@8.15.4",
+    "packageManager": "pnpm@8.15.5",
     "scripts": {
         "fmt": "prettier .",
         "fmt:fix": "prettier --write .",
         "lint:js": "eslint **/*.{js,svelte,ts}"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^7.3.1",
+        "@typescript-eslint/parser": "^7.3.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.35.1",
